<resources>
    <string name="app_name">movieInfo</string>

    // bottom navigation item text
    <string name="bottom_navigation_movie_info">영화 정보</string>
    <string name="bottom_navigation_movie_star_info">영화인 정보</string>

    // movie list text
    <string name="movie_list_title">Movie List</string>
    <string name="item_movie_list_name">영화 제목:</string>
    <string name="item_movie_list_year">제작 연도:</string>
    <string name="item_movie_list_type">영화 유형:</string>
    <string name="item_movie_list_nation">제작 국가:</string>
    <string name="item_movie_list_alt">영화 장르:</string>

    // movie star list text
    <string name="movie_star_list_title">Movie Star List</string>
    <string name="item_movie_star_list_name">이름:</string>
    <string name="item_movie_star_list_role">분야:</string>
    <string name="item_movie_star_list_filmography">필모그래피:</string>
</resources>