<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="movie_list_item"
            type="com.example.movieinfo.model.movielist.MovieListData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_main_black">

        <TextView
            android:id="@+id/movie_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_movie_list_name"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_name_input_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_name_input_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_input"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_name_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_list_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_movie_list_year"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_list_input_year"
            app:layout_constraintStart_toStartOf="@id/movie_name_text_view"
            app:layout_constraintTop_toTopOf="@id/movie_list_input_year" />

        <TextView
            android:id="@+id/movie_list_input_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_input"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_list_year"
            app:layout_constraintTop_toBottomOf="@id/movie_name_input_text_view" />

        <TextView
            android:id="@+id/movie_list_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_movie_list_type"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_list_input_type"
            app:layout_constraintStart_toStartOf="@id/movie_list_year"
            app:layout_constraintTop_toTopOf="@id/movie_list_input_type" />

        <TextView
            android:id="@+id/movie_list_input_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_input"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_list_type"
            app:layout_constraintTop_toBottomOf="@id/movie_list_input_year" />

        <TextView
            android:id="@+id/movie_list_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_movie_list_nation"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_list_input_nation"
            app:layout_constraintStart_toStartOf="@id/movie_list_type"
            app:layout_constraintTop_toTopOf="@id/movie_list_input_nation" />

        <TextView
            android:id="@+id/movie_list_input_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_input"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_list_nation"
            app:layout_constraintTop_toBottomOf="@id/movie_list_input_type" />

        <TextView
            android:id="@+id/movie_list_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_movie_list_alt"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_list_input_alt"
            app:layout_constraintStart_toStartOf="@id/movie_list_nation"
            app:layout_constraintTop_toTopOf="@id/movie_list_input_alt" />

        <TextView
            android:id="@+id/movie_list_input_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/movie_white"
            android:textSize="@dimen/item_input"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_list_alt"
            app:layout_constraintTop_toBottomOf="@id/movie_list_input_nation" />

        <View
            android:id="@+id/movie_list_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_view_height"
            android:layout_marginTop="20dp"
            android:background="@color/movie_view_grey"
            app:layout_constraintTop_toBottomOf="@id/movie_list_input_alt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>